--- a/HealthServicesApp/app/src/main/AndroidManifest.xml
+++ b/HealthServicesApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity android:name=".SignUpActivity">
 
         </activity>
+        <activity android:name="SplashActivity">
+        </activity>
     </application>
 
 </manifest>
